# lib/db/src/schema/index.ts
@@ -1,1 +1,3 @@
 export * from "./successCases";
+export * from "./offerings";
+export * from "./useCases";
